// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterGroup /> spec render the component 1`] = `
HTMLCollection [
  <div>
    <div
      class="euiFilterGroup"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiFilterButton euiFilterButton-hasNotification euiFilterButton--hasIcon"
            data-test-subj="test"
            placeholder="test"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
            >
              EuiIconMock
              <span
                class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
              >
                <span
                  class="euiFilterButton__textShift"
                />
                <span
                  aria-label="1 available filters"
                  class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFilterButton__notification"
                >
                  1
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <button>
      hide
    </button>
  </div>,
]
`;

exports[`<FilterGroup /> spec render the component 2`] = `
HTMLCollection [
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="euiFilterGroup"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiFilterButton euiFilterButton-isSelected euiFilterButton-hasNotification euiFilterButton--hasIcon"
            data-test-subj="test"
            placeholder="test"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
            >
              EuiIconMock
              <span
                class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
              >
                <span
                  class="euiFilterButton__textShift"
                />
                <span
                  aria-label="1 available filters"
                  class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFilterButton__notification"
                >
                  1
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <button>
      hide
    </button>
  </div>,
  <div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="some_html_id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--noShadow euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen"
        data-autofocus="true"
        role="dialog"
        style="top: 16px; left: -22px; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="some_html_id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div>
          <div
            class="ouiFilterSelect__items"
          >
            <button
              class="euiFilterSelectItem"
              data-test-subj="FilterGroupSelectItem-test option"
              role="option"
              type="button"
            >
              <span
                class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  EuiIconMock
                </div>
                <span
                  class="euiFlexItem euiFilterSelectItem__content"
                >
                  test option
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`<FilterGroup /> spec render the component 3`] = `
HTMLCollection [
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="euiFilterGroup"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiFilterButton euiFilterButton-isSelected euiFilterButton-hasActiveFilters euiFilterButton-hasNotification euiFilterButton--hasIcon"
            data-test-subj="test"
            placeholder="test"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
            >
              EuiIconMock
              <span
                class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
              >
                <span
                  class="euiFilterButton__textShift"
                />
                <span
                  aria-label="1 active filters"
                  class="euiNotificationBadge euiNotificationBadge--medium euiFilterButton__notification"
                >
                  1
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <button>
      hide
    </button>
  </div>,
  <div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="some_html_id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--noShadow euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen"
        data-autofocus="true"
        role="dialog"
        style="top: 16px; left: -22px; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="some_html_id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div>
          <div
            class="ouiFilterSelect__items"
          >
            <button
              class="euiFilterSelectItem"
              data-test-subj="FilterGroupSelectItem-test option"
              role="option"
              type="button"
            >
              <span
                class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  EuiIconMock
                </div>
                <span
                  class="euiFlexItem euiFilterSelectItem__content"
                >
                  test option
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;

exports[`<FilterGroup /> spec render the component 4`] = `
HTMLCollection [
  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="euiFilterGroup"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            class="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiFilterButton euiFilterButton-isSelected euiFilterButton-hasNotification euiFilterButton--hasIcon"
            data-test-subj="test"
            placeholder="test"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
            >
              EuiIconMock
              <span
                class="euiButtonEmpty__text euiFilterButton__text-hasNotification"
              >
                <span
                  class="euiFilterButton__textShift"
                />
                <span
                  aria-label="1 available filters"
                  class="euiNotificationBadge euiNotificationBadge--medium euiNotificationBadge--subdued euiFilterButton__notification"
                >
                  1
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <button>
      hide
    </button>
  </div>,
  <div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-describedby="some_html_id"
        aria-live="off"
        aria-modal="true"
        class="euiPanel euiPanel--borderRadiusMedium euiPanel--plain euiPanel--noShadow euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen"
        data-autofocus="true"
        role="dialog"
        style="top: 16px; left: -22px; z-index: 2000;"
        tabindex="0"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
          style="left: 10px; top: 0px;"
        />
        <p
          class="euiScreenReaderOnly"
          id="some_html_id"
        >
          You are in a dialog. To close this dialog, hit escape.
        </p>
        <div>
          <div
            class="ouiFilterSelect__items"
          >
            <button
              class="euiFilterSelectItem"
              data-test-subj="FilterGroupSelectItem-test option"
              role="option"
              type="button"
            >
              <span
                class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
              >
                <div
                  class="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  EuiIconMock
                </div>
                <span
                  class="euiFlexItem euiFilterSelectItem__content"
                >
                  test option
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-hidden="true"
      data-aria-hidden="true"
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>,
]
`;
